--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.password=springstudent
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#
+# Spring Data REST properties
+#
+spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=20
